# d2b-internal-dev-oluwasayo-serverless_workflow

./: .gitignore  README.md  data.csv  new_data.csv  pyproject.toml  tox.ini
src/notebooks/: d2b-internal-dev-oluwasayo-lambdas.ipynb
src/notebooks/YEAR=<2022>/MONTH=<06>/DAY=<22>/: business_data.parquet
src/scripts/: d2b-internal-dev-oluwasayo-input-csv-trigger.py  d2b-internal-dev-oluwasayo-parquet-trigger.py  schema.py  secret_manager.py
src/sql/: script.sql
