[tool.poetry]
name = "d2b-internal-dev-oluwasayo-serverless_workflow"
version = "0.1.0"
description = ""
authors = ["sayoakin <oluwasayo.akinkunmi@data2bots.com>"]

packages = [
    {include = "src"}
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.4"
pandas = "^1.4.2"
boto3 = "^1.24.8"
pyarrow = "^8.0.0"
tox = "^3.25.0"
pre-commit = "^2.19.0"
yapf = "^0.32.0"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.yapf]
based_on_style = "pep8"
spaces_before_comment = 4
split_before_logical_operator = true

[tool.yapfignore]
ignore_patterns = [
    "man.py"
]
